add simple server config for dev

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,6 @@
     <tails-dropdown name="James"></tails-dropdown>
 
     <!-- END COMPONENTS TEST -->
-    <script src="../dist/components.js"></script>
+    <script src="bundle.js"></script>
   </body>
 </html>
