rename test component

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <body>
     <!-- BEGIN COMPONENTS TEST -->
 
-    <tails-dropdown name="James"></tails-dropdown>
+    <tails-test name="James"></tails-test>
 
     <!-- END COMPONENTS TEST -->
     <script src="bundle.js"></script>
