--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <body>
     <!-- BEGIN COMPONENTS TEST -->
 
-    <tails-test name="James"></tails-test>
+    <mini-greeter name="James"></mini-greeter>
 
     <!-- END COMPONENTS TEST -->
     <script src="bundle.js"></script>
